<resources>
    <string name="app_name">حسابداری شخصی</string>
    <string name="username">شناسه کاربری</string>
    <string name="pass">رمز عبور</string>
    <string name="login">ورود</string>
    <string name="email">ایمیل</string>
    <string name="create_account">ایجاد حساب کاربری</string>
    <string name="register">ثبت نام</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hazine">ثبت هزینه</string>
    <string name="amount">مبلغ</string>
    <string name="toman">تومان</string>
    <string name="category">دسته بندی</string>
    <string name="hesab">حساب من</string>
    <string name="description">توضیحات</string>
    <string name="date">تاریخ</string>
    <string name="daramad">ثبت درآمد</string>
    <string name="balance">موجودی</string>
</resources>